--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "CopyShare",
-  "private": false,
+  "private": true,
   "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",  <-- ADD A COMMA HERE!
+    "build": "tsc && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
