--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,18 @@
       "headers": [
         {
           "key": "Content-Security-Policy",
-          "value": "default-src 'self'; script-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self' https://*.supabase.co; font-src 'self';"
+          "value": "default-src 'self'; " +
+                   "script-src 'self'; " +
+                   "style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://fonts.gstatic.com; " +
+                   "img-src 'self' data: https://*.supabase.co https://copyshare-inky.vercel.app; " +
+                   "connect-src 'self' https://*.supabase.co https://fonts.googleapis.com https://fonts.gstatic.com; " +
+                   "font-src 'self' https://fonts.googleapis.com https://fonts.gstatic.com; " +
+                   "object-src 'none'; " +
+                   "base-uri 'self'; " +
+                   "form-action 'self'; " +
+                   "frame-ancestors 'none'; " +
+                   "block-all-mixed-content; " +
+                   "upgrade-insecure-requests;"
         }
       ]
     }
